# fastapi-flyio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  prisma.config.py  pyproject.toml
.cursor/rules/: project.mdc
.github/workflows/: ci.yml  delete-branch.yml
app/: deps.py  main.py
app/domain/: __init__.py  memo.py
app/infrastructure/: __init__.py  prisma_memo_repository.py
app/interfaces/: __init__.py  memo_router.py  memo_schema.py
app/usecases/: __init__.py  memo_repository.py  memo_use_cases.py
prisma/: schema.prisma
prisma/migrations/20260208031315_init/: migration.sql
tests/: conftest.py
tests/api/: __init__.py  test_memo_api.py
tests/domain/: __init__.py  test_memo.py
tests/usecases/: __init__.py  test_memo_use_cases.py
