[project]
name = "fastapi-flyio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.4",
    "uvicorn[standard]>=0.39.0",
    "prisma>=0.11.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "prisma"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
